# pkg-geos

./: configure  configure.in  geos_3.3.8.orig.tar.bz2.delta  geos_3.3.8.orig.tar.bz2.id  geos_3.3.9.orig.tar.bz2.delta  geos_3.3.9.orig.tar.bz2.id
capi/: geos_ts_c.cpp
debian/: changelog  control
doc/: Doxyfile
include/geos/: Makefile.am  Makefile.in  profiler.h  version.h.vc
include/geos/linearref/: Makefile.am  Makefile.in
include/geos/operation/overlay/snap/: LineStringSnapper.h
src/: Makefile.vc
src/algorithm/: LineIntersector.cpp
src/geom/: GeometryCollection.cpp
src/geom/prep/: PreparedPolygonIntersects.cpp
src/noding/snapround/: HotPixel.cpp
src/operation/buffer/: BufferInputLineSimplifier.cpp  OffsetCurveBuilder.cpp
src/operation/overlay/snap/: LineStringSnapper.cpp
src/simplify/: LineSegmentIndex.cpp
swig/: geos.i
tests/unit/algorithm/: RobustLineIntersectionTest.cpp
tests/unit/geom/Geometry/: coversTest.cpp
