# $Id: Makefile.am 3828 2013-07-05 14:43:53Z strk $
#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
EXTRA_DIST = 

geosdir = $(includedir)/geos/linearref

geos_HEADERS = \
    ExtractLineByLocation.h \
    LengthIndexedLine.h \
    LengthIndexOfPoint.h \
    LengthLocationMap.h \
    LinearIterator.h \
    LinearGeometryBuilder.h \
    LinearLocation.h \
    LocationIndexOfLine.h \
    LocationIndexOfPoint.h
